--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -124,10 +124,11 @@ ion-icon {
         display: flex;
         flex-direction: row;
         height: 100%;
-        padding: 0em 0em 1em 0em;
+        padding: 0em 2em 1em 0em;
         max-width: 200px;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
+        font-size: 0.95em;
 
         .birthday {
             font-size: 0.95em;
