--- a/src/app/modals/update-profile-modal/update-profile-modal.page.html
+++ b/src/app/modals/update-profile-modal/update-profile-modal.page.html
@@ -86,7 +86,7 @@
           <ion-select-option value="Feta Creator">Feta Creator</ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item class="bio-item" counter="true" fill="solid">
+      <ion-item class="bio-item" counter="true" >
         <div class="text-area-wrapper">
         <ion-label class="name-input" position="stacked">Bio</ion-label>
           <ion-textarea autoGrow="true" placeholder="Tell us about yourself..." class="bio-input" maxlength="150" formControlName="bio"></ion-textarea>
