--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -2,6 +2,7 @@
     padding: 0 1em;
 }
 
+
 .no-photos, .no-videos {
     display: flex;
     justify-content: center;
@@ -12,6 +13,16 @@
         color: var(--ion-color-medium);
         font-weight: 500;
     }
+}
+
+.relation {
+    margin: -1.25em auto 1em auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.75em;
+    color: var(--ion-color-medium);
+    font-weight: 600;
 }
 
 .separator-toolbar {
@@ -306,13 +317,9 @@ ion-icon:hover {
     justify-content: center;
     font-size: 0.85em;
 
-    .username {
-        color: var(--ion-color-dark);
-        font-weight: 600;
-    }
-
     .fullname {
-        color: var(--ion-color-medium);
+        color: var(--ion-color-dark);
         text-align: center;
+        font-weight: 600;
     }
 }
