--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -17,8 +17,23 @@
         <ion-avatar *ngIf="profilePhoto">
           <img [src]="profilePhoto">
         </ion-avatar>
+        <div class="name-info">
+          <p class="fullname" *ngIf="profileData.first_name && profileData.last_name">
+            {{profileData.first_name}}&nbsp;{{profileData.last_name}}</p>
+          <p class="fullname" *ngIf="!profileData.first_name || !profileData.last_name">{{profileData.username}}</p>
+        </div>
+        <div>
+          <p class="relation">({{profileData.relation}})</p>
+        </div>
       </div>
       <div class="right-top-profile-wrapper">
+        <div class="birthday-div">
+          <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') |
+              dateSuffix}}</strong></p>
+          <div>
+            <p class="birthday-text">(birthday)</p>
+          </div>
+        </div>
         <div class="right-top-profile">
           <div class="stats-div">
             <p class="stats-count"><strong>{{photosPostedCount}}</strong></p>
@@ -44,7 +59,11 @@
           <img [src]="profilePhoto">
         </ion-avatar>
         <div class="name-info">
-          <p class="username">{{profileData.username}}</p>&nbsp;<p class="fullname">({{profileData.first_name}}&nbsp;{{profileData.last_name}})</p>
+          <p class="fullname" *ngIf="profileData.first_name && profileData.last_name">{{profileData.first_name}}&nbsp;{{profileData.last_name}}</p>
+          <p class="fullname" *ngIf="!profileData.first_name || !profileData.last_name">{{profileData.username}}</p>
+        </div>
+        <div>
+          <p class="relation">({{profileData.relation}})</p>
         </div>
       </div>
       <div class="right-top-profile-wrapper">
