--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -21,7 +21,7 @@ ion-refresher.refresher-active {
     height: 500px;
     border: none !important;
     overflow: hidden;
-    object-fit: cover;
+    object-fit: contain;
 
     vg-player {
         display: flex;
@@ -29,7 +29,7 @@ ion-refresher.refresher-active {
     }
 
     vg-player video {
-        object-fit: contain;
+        object-fit: cover;
         margin: 0;
         padding: 0;
         width: 100vw;
@@ -39,14 +39,14 @@ ion-refresher.refresher-active {
     .video-background {
         position: relative;
         background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
+        background-repeat: no-repeat;
         background-position: center;
-        aspect-ratio: 4/5;
+        -webkit-background-size: cover;
+        // -moz-background-size: cover;
+        // -o-background-size: cover;
         overflow: hidden;
         width: 100%;
-        height: 100%;
+        height: 500px;
     }
     
     video {
@@ -74,6 +74,7 @@ ion-refresher.refresher-active {
     justify-content: center;
     align-items: center;
     z-index: 5;
+    cursor: pointer;
 
     ion-icon {
         width: 15px !important;
@@ -93,6 +94,7 @@ ion-refresher.refresher-active {
     flex-direction: row;
     justify-content: center;
     z-index: 5;
+    cursor: pointer;
 
     p {
         margin: 0.5em 1em;
@@ -114,6 +116,7 @@ ion-refresher.refresher-active {
     justify-content: center;
     align-items: center;
     z-index: 5;
+    cursor: pointer;
 
     ion-icon {
         width: 15px !important;
