--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -55,12 +55,6 @@
               </ng-template>
             </swiper>
             <div id="video-container" *ngIf="image.isVideo">
-              <!-- <video (ended)="videoEnd()" class="video_{{image.id}}" type="application/x-mpegURL" width="100%" #timelineVideo type="video/m3u8" *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" preload="auto" playsinline></video> -->
-              <!-- <div class="video-background" *ngIf="((browser === 'other') || (platformView.includes('capacitor'))) && image.isVideo" style="background-image: url({{image.posterImage}})">
-                <video (ended)="videoEnd()" class="video_{{image.id}}" #timelineVideo *ngIf="((browser === 'other') || (platformView.includes('capacitor'))) && image.isVideo" preload="auto" playsinline muted webkit-playsinline>
-                  <source [src]="image.mediaSource" type="application/x-mpegURL">
-                </video>
-              </div> -->
               <vg-player>
                 <video (ended)="videoEnd()" #timelineVideo class="video_{{image.id}}" [vgMedia]="$any(media)" [vgHls]="image.mediaSource" #media id="multipleVideos" preload="auto" playsinline webkit-playsinline="webkit-playsinline" muted>
                   <source [vgHls]="image.mediaSource" type="application/x-mpegURL">
@@ -131,10 +125,10 @@
     </ion-fab-button>
   </ion-fab>
 
-  <!-- <ion-infinite-scroll *ngIf="!profileSearch" (ionInfinite)="loadData($event)" position="bottom">
+  <ion-infinite-scroll threshold="60%" (ionInfinite)="loadData($event)" position="bottom">
     <ion-infinite-scroll-content loadingSpinner="lines-small">
     </ion-infinite-scroll-content>
-  </ion-infinite-scroll> -->
+  </ion-infinite-scroll>
 
 </ion-content>
 
