tries to push first launch

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>
-        Home
-      </ion-title>
+  <ion-header class="ion-no-border" mode="md">
+    <ion-toolbar color="light">
+        <ion-title>
+          Feta
+        </ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
