--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Baumans&family=Gentium+Book+Plus&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Slab:wght@300&display=swap');
+
+
+
+ion-title {
+  font-family: 'Baumans', cursive !important;
+  font-weight: 400;
+  font-size: 1.75em;
+  display: flex;
+  justify-content: flex-start;
+}
+
 .loading-top {
   display: flex;
   align-items: center;
