--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,13 +1,13 @@
-<ion-header>
-  <ion-toolbar mode="ios">
-    <ion-title>
-      {{profileData.username}}
-    </ion-title>
-    <ion-icon (click)="openMenu()" class="menu-button" slot="end" name="menu"></ion-icon>
+<ion-header mode="md" class="ion-no-border">
+  <ion-toolbar color="light">
+      <ion-title>
+        {{profileData.username}}
+      </ion-title>
+      <ion-icon (click)="openMenu()" class="menu-button" slot="end" name="menu"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <div class="profile-info">
     <div *ngIf="!editAccess" class="top-of-profile-edit">
       <div class="left-top-profile">
@@ -28,10 +28,10 @@
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
+          <ion-icon class="birthday-icon" src="../../../assets/streamline/cake-birthday.svg"></ion-icon>&nbsp;&nbsp;
           <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') |
               dateSuffix}}</strong></p>
           <div>
-            <p class="birthday-text">(birthday)</p>
           </div>
         </div>
         <div class="right-top-profile">
@@ -68,8 +68,8 @@
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
-          <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffix}}</strong></p>
-          <div><p class="birthday-text">(birthday)</p></div>
+          <div><ion-icon class="birthday-icon" src="../../../assets/streamline/cake-birthday.svg"></ion-icon></div>&nbsp;&nbsp;
+          <p class="birthday"><strong class="edit-birthday">{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffix}}</strong></p>
         </div>
         <div class="right-top-profile">
           <div class="stats-div">
