--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,6 +1,14 @@
 ion-tabs {
-    max-width: 800px;
     display: flex;
     justify-content: center;
     margin: auto;
+}
+
+ion-tabs, ion-tab-bar, ion-tab-button {
+    background: var(--ion-color-light)
+}
+
+ion-tab-bar {
+    display: flex;
+    justify-content: center;
 }
