--- a/src/app/pages/timeline/timeline.page.scss
+++ b/src/app/pages/timeline/timeline.page.scss
@@ -1,3 +1,25 @@
+ion-header {
+    background: var(--ion-color-light) !important;
+}
+
+.header-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0.5em 0em;
+    border: 1px solid var(--ion-color-light);
+}
+
+ion-title {
+    font-family: 'Baumans', cursive !important;
+    font-weight: 400;
+    font-size: 1.75em;
+    display: flex;
+    justify-content: flex-start !important;
+}
+
 .button-div {
     display: flex;
     flex-direction: row;
@@ -6,4 +28,21 @@
     ion-icon {
         padding: 0 0.25em;
     }
+}
+
+ion-tabs {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+ion-tabs,
+ion-tab-bar,
+ion-tab-button, ion-header, ion-toolbar {
+    background: var(--ion-color-light)
+}
+
+ion-tab-bar {
+    display: flex;
+    justify-content: center;
 }
